แก้ตารางไม่โชว์

--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -720,7 +720,7 @@
                 <i class="fas fa-clipboard-check"></i> ปิดจ๊อบ
                 </button>
                 <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">ค้นหา/ปิดจ๊อบรายวัน</a></li>
+                <li><a class="dropdown-item" href="#" data-table="daily-job-table-section">ค้นหา/ปิดจ๊อบรายวัน</a></li>
                 <li><a class="dropdown-item" href="#" data-table="closejob-table-section">ตารางลูกค้าปิดจ๊อบ</a></li>
                 </ul>
             </div>
